--- a/resume/style.css
+++ b/resume/style.css
@@ -7,26 +7,30 @@ html, body {
     font-size: 16px;
     background-color: rgb(255, 251, 2);
   }
-/*
+
   body {
-    
-    min-width: 800px;
+
     margin: 0 auto;
   }
 
-  */
-  header {
-    max-width:1650px;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 15px;
-    background-color: rgb(204, 7, 7);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    font-size: 4rem;
-    }
+header {
+  max-width:1650px;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 15px;
+  background-color: rgb(204, 7, 7);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  font-size: 4rem;
+  align-items: center;
+  }
+
+header img {
+  display: flex;
+  align-items: center;
+}
 
 header h1 {
   font-family: 'Sansita Swashed', cursive;
@@ -46,8 +50,11 @@ header h1 {
     margin-top: 15px;
     font-family: 'Sansita Swashed', cursive;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+      margin: auto;
+      width: auto;
+      padding: 10px;
+    /*flex-wrap: wrap;
+    flex-direction: row;*/
     justify-content: space-around;
     align-items: center;
     align-content: center;
@@ -56,26 +63,30 @@ header h1 {
   }
 
 .history {
+  padding: 0;
   flex-grow: 2;
   text-align: left;
   background-color: rgba(255, 255, 255, 0.822);
 }
 
 .container p{
+  display: flex;
   background-color: rgba(255, 255, 255, 0.822);
-  width: 200px;
   border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: tomato;
 
 }
 .container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
   flex-direction: column;
-  flex-grow: 1;
 }
 
 .container img{
+  display: flex;
+  width: 350px;
   border-style: solid;
   border-width: 1px;
   border-color: tomato;
